Fixed content jumping by adding fixed height wrapper for img.

--- a/src/public/sass/input.scss
+++ b/src/public/sass/input.scss
@@ -10,14 +10,16 @@
   background: lightgreen;
 }
 
-.image-container {
+.image-wrapper {
   background: lightblue;
   text-align: center;
+  min-height: 960px;
+  transition: height 0.66s ease-out;
 }
 
 .image-container img {
   height: auto; 
-  width: 100%; 
+  width: 100%;
 }
 
 .review-container {
